# Inventory.gd
extends Control

# ==================== å¼•ç”¨ ====================
@onready var back_button = $VBoxContainer/TopBar/MarginContainer/HBoxContainer/BackButton
@onready var capacity_label = $VBoxContainer/TopBar/MarginContainer/HBoxContainer/CapacityContainer/CapacityLabel
@onready var grid_container = $VBoxContainer/ScrollContainer/CenterContainer/GridContainer
@onready var card_detail_panel = $CardDetailPanel
@onready var expand_bag_button = $VBoxContainer/BottomBar/MarginContainer/HBoxContainer/ExpandBagButton
@onready var batch_delete_button = $VBoxContainer/BottomBar/MarginContainer/HBoxContainer/BatchDeleteButton

# ==================== é è£½é«” ====================
var slot_scene = preload("res://scenes/inventory/InventorySlot.tscn")

# ==================== è³‡æ–™ ====================
var inventory_items: Array = []  # èƒŒåŒ…ä¸­çš„å¡ç‰‡IDåˆ—è¡¨
var context_menu: PopupMenu = null  # å³éµèœå–®
var context_menu_card_id: String = ""  # ç•¶å‰å³éµé¸ä¸­çš„å¡ç‰‡
var batch_delete_mode: bool = false  # æ‰¹é‡åˆªé™¤æ¨¡å¼
var selected_for_deletion: Array = []  # é¸ä¸­è¦åˆªé™¤çš„å¡ç‰‡instance_idåˆ—è¡¨
var slot_instances: Dictionary = {}  # instance_id -> InventorySlot æ˜ å°„ï¼Œç”¨æ–¼å¿«é€Ÿæ›´æ–°

# ==================== åˆå§‹åŒ– ====================

func _ready():
	print("ğŸ’ èƒŒåŒ…è¼‰å…¥å®Œæˆ")

	# é€£æ¥æŒ‰éˆ•
	back_button.pressed.connect(_on_back_pressed)
	expand_bag_button.pressed.connect(_on_expand_bag_pressed)
	batch_delete_button.pressed.connect(_on_batch_delete_pressed)

	# å‰µå»ºå³éµèœå–®
	create_context_menu()

	# è¼‰å…¥èƒŒåŒ…è³‡æ–™
	load_inventory()

	# å‰µå»ºæ ¼å­
	create_inventory_slots()

	# æ›´æ–°å®¹é‡é¡¯ç¤º
	update_capacity_display()

# ==================== å³éµèœå–® ====================

func create_context_menu():
	"""å‰µå»ºå³éµä¸Šä¸‹æ–‡èœå–®"""
	context_menu = PopupMenu.new()
	context_menu.name = "ContextMenu"
	add_child(context_menu)

	# æ·»åŠ èœå–®é …
	context_menu.add_item("é€²åŒ–", 0)
	context_menu.add_item("åˆªé™¤å¡ç‰‡", 1)

	# é€£æ¥é¸æ“‡ä¿¡è™Ÿ
	context_menu.id_pressed.connect(_on_context_menu_item_selected)

func _on_context_menu_item_selected(id: int):
	"""è™•ç†èœå–®é …é¸æ“‡"""
	match id:
		0:  # é€²åŒ–
			goto_evolution_with_card(context_menu_card_id)
		1:  # åˆªé™¤å¡ç‰‡
			delete_card(context_menu_card_id)

func goto_evolution_with_card(instance_id: String):
	"""è·³è½‰åˆ°é€²åŒ–ä»‹é¢ä¸¦è‡ªå‹•æ”¾å…¥å¡ç‰‡"""
	if instance_id.is_empty():
		return

	# æª¢æŸ¥å¡ç‰‡æ˜¯å¦åœ¨çµ„éšŠä¸­
	if PlayerDataManager.is_card_in_team(instance_id):
		show_warning_dialog("ç„¡æ³•é€²åŒ–", "æ­¤å¡ç‰‡æ­£åœ¨çµ„éšŠä¸­ï¼Œç„¡æ³•é€²åŒ–")
		return

	# å°‡é¸ä¸­çš„å¡ç‰‡instance_idå„²å­˜åˆ°GameManager
	GameManager.selected_card_for_evolution = instance_id

	# è·³è½‰åˆ°é€²åŒ–ä»‹é¢
	GameManager.goto_evolution()

func delete_card(instance_id: String):
	"""åˆªé™¤å¡ç‰‡ï¼ˆä½¿ç”¨ instance_idï¼‰"""
	print("ğŸ” [åˆªé™¤] å˜—è©¦åˆªé™¤å¡ç‰‡å¯¦ä¾‹: %s" % instance_id)

	if instance_id.is_empty():
		print("âŒ [åˆªé™¤] å¯¦ä¾‹IDç‚ºç©º")
		return

	# âœ… ç²å–è©²å¯¦ä¾‹å°æ‡‰çš„ card_id
	var card_id = PlayerDataManager.get_card_id_from_instance(instance_id)
	if card_id.is_empty():
		print("âŒ [åˆªé™¤] ç„¡æ•ˆçš„å¯¦ä¾‹ID")
		show_warning_dialog("åˆªé™¤å¤±æ•—", "ç„¡æ³•æ‰¾åˆ°æ­¤å¡ç‰‡")
		return

	print("ğŸ” [åˆªé™¤] instance_%s å°æ‡‰çš„å¡ç‰‡ID: %s" % [instance_id, card_id])

	# âœ… æª¢æŸ¥é€™å€‹ç‰¹å®šçš„å¯¦ä¾‹IDæ˜¯å¦åœ¨ä»»ä½•éšŠä¼ä¸­
	var instance_ids_in_teams = PlayerDataManager.get_all_instance_ids_in_teams()
	print("ğŸ” [åˆªé™¤] æ‰€æœ‰éšŠä¼ä¸­çš„å¯¦ä¾‹: ", instance_ids_in_teams)
	print("ğŸ” [åˆªé™¤] æ­¤å¯¦ä¾‹æ˜¯å¦åœ¨éšŠä¼ä¸­: %s" % (instance_id in instance_ids_in_teams))

	if instance_id in instance_ids_in_teams:
		# é¡¯ç¤ºæç¤ºæ¡†
		print("âš ï¸ [åˆªé™¤] å¡ç‰‡åœ¨éšŠä¼ä¸­ï¼Œç„¡æ³•åˆªé™¤")
		show_warning_dialog("ç„¡æ³•åˆªé™¤", "æ­¤å¡ç‰‡æ­£åœ¨éšŠä¼ä¸­ä½¿ç”¨\nè«‹å…ˆå¾éšŠä¼ä¸­ç§»é™¤")
		return

	# âœ… ä½¿ç”¨ instance_id åˆªé™¤
	print("ğŸ” [åˆªé™¤] èª¿ç”¨ PlayerDataManager.remove_card_by_instance()")
	var success = PlayerDataManager.remove_card_by_instance(instance_id)
	print("ğŸ” [åˆªé™¤] remove_card_by_instance è¿”å›: %s" % success)

	if success:
		print("âœ… åˆªé™¤å¡ç‰‡æˆåŠŸï¼š%s (instance_%s)" % [card_id, instance_id])

		# åˆ·æ–°é¡¯ç¤º
		load_inventory()
		create_inventory_slots()
		update_capacity_display()
	else:
		print("âŒ [åˆªé™¤] åˆªé™¤å¤±æ•—")
		show_warning_dialog("åˆªé™¤å¤±æ•—", "ç„¡æ³•æ‰¾åˆ°æ­¤å¡ç‰‡")

func show_warning_dialog(title: String, message: String):
	"""é¡¯ç¤ºè­¦å‘Šå°è©±æ¡†"""
	var dialog = AcceptDialog.new()
	dialog.dialog_text = message
	dialog.title = title
	dialog.ok_button_text = "ç¢ºå®š"
	add_child(dialog)
	dialog.popup_centered()

	# å°è©±æ¡†é—œé–‰å¾Œè‡ªå‹•åˆªé™¤
	dialog.confirmed.connect(func():
		dialog.queue_free()
	)
	dialog.canceled.connect(func():
		dialog.queue_free()
	)

# ==================== è¼‰å…¥èƒŒåŒ…è³‡æ–™ ====================

func load_inventory():
	"""å¾ PlayerDataManager è¼‰å…¥èƒŒåŒ…"""
	inventory_items = PlayerDataManager.get_inventory()
	print("  è¼‰å…¥äº† %d å¼µå¡ç‰‡" % inventory_items.size())

# ==================== å‰µå»ºèƒŒåŒ…æ ¼å­ ====================

func create_inventory_slots():
	"""å‰µå»ºèƒŒåŒ…æ ¼å­ï¼ˆåŒ…å«è‡¨æ™‚æ ¼å­ï¼‰"""
	# æ¸…ç©ºèˆŠæ ¼å­å’Œæ˜ å°„
	for child in grid_container.get_children():
		child.queue_free()
	slot_instances.clear()

	var capacity = PlayerDataManager.player_data.bag_capacity
	var actual_items = inventory_items.size()

	# âœ… å¦‚æœèƒŒåŒ…è¶…éä¸Šé™ï¼Œé¡¯ç¤ºæ‰€æœ‰æ ¼å­ï¼ˆåŒ…æ‹¬è‡¨æ™‚æ ¼å­ï¼‰
	var total_slots = max(capacity, actual_items)

	# å‰µå»ºæ ¼å­
	for i in range(total_slots):
		var slot = slot_scene.instantiate()
		grid_container.add_child(slot)

		# å¦‚æœæœ‰å¡ç‰‡ï¼Œè¨­å®šå¡ç‰‡è³‡æ–™
		var instance_id = ""
		if i < inventory_items.size():
			instance_id = inventory_items[i]
			slot.setup(instance_id)
			# âœ… ä¿å­˜æ˜ å°„ï¼Œç”¨æ–¼å¿«é€Ÿæ›´æ–°
			slot_instances[instance_id] = slot
		else:
			slot.show_empty()

		# âœ… æ‰¹é‡åˆªé™¤æ¨¡å¼ï¼šæ¨™è¨˜é¸ä¸­çš„å¡ç‰‡
		if batch_delete_mode and not instance_id.is_empty() and is_card_selected(instance_id):
			slot.set_selected(true)

		# âœ… æ¨™è¨˜è¶…å‡ºä¸Šé™çš„æ ¼å­ï¼ˆè‡¨æ™‚æ ¼å­ï¼‰
		if i >= capacity:
			slot.is_overflow_slot = true
			slot.update_modulate()

		# é€£æ¥é»æ“Šä¿¡è™Ÿ
		slot.slot_clicked.connect(_on_slot_clicked)
		slot.slot_right_clicked.connect(_on_slot_right_clicked)

		# é€£æ¥æ‡¸åœä¿¡è™Ÿ
		slot.mouse_entered.connect(slot._on_mouse_entered)
		slot.mouse_exited.connect(slot._on_mouse_exited)

# ==================== æ›´æ–°é¡¯ç¤º ====================

func update_capacity_display():
	"""æ›´æ–°å®¹é‡é¡¯ç¤º"""
	var used = inventory_items.size()
	var total = PlayerDataManager.player_data.bag_capacity
	capacity_label.text = "%d/%d" % [used, total]

	# âœ… å¦‚æœè¶…éä¸Šé™ï¼Œè®Šç´…è‰²ä¸¦é¡¯ç¤ºè­¦å‘Š
	if used > total:
		capacity_label.add_theme_color_override("font_color", Color.RED)
	# å¦‚æœæ¥è¿‘æ»¿äº†ï¼Œè®Šé»ƒè‰²
	elif used >= total * 0.9:
		capacity_label.add_theme_color_override("font_color", Color.YELLOW)
	else:
		capacity_label.add_theme_color_override("font_color", Color.WHITE)

# ==================== è¼¸å…¥è™•ç† ====================

func _input(event: InputEvent):
	"""è™•ç† ESC éµè¿”å›"""
	if event.is_action_pressed("ui_cancel"):  # ESC éµ
		if batch_delete_mode:
			# æ‰¹é‡åˆªé™¤æ¨¡å¼ä¸‹ï¼ŒESC å–æ¶ˆæ¨¡å¼
			cancel_batch_delete_mode()
		else:
			# æ­£å¸¸è¿”å›
			_on_back_pressed()

# ==================== æŒ‰éˆ•å›èª¿ ====================

func _on_back_pressed():
	"""è¿”å›ä¸»é¸å–®"""
	print("â† è¿”å›ä¸»é¸å–®")
	GameManager.goto_main_menu()

func _on_slot_clicked(instance_id: String, slot_position: Vector2):
	"""æ ¼å­è¢«é»æ“Šï¼ˆæ¥æ”¶ instance_idï¼‰"""
	# âœ… æ‰¹é‡åˆªé™¤æ¨¡å¼ä¸‹ï¼Œé»æ“Šåˆ‡æ›é¸æ“‡ç‹€æ…‹
	if batch_delete_mode:
		toggle_card_selection(instance_id)
		# âœ… ç«‹å³æ›´æ–°è©²å¡ç‰‡çš„é¸ä¸­ç‹€æ…‹ï¼Œç„¡éœ€åˆ·æ–°æ•´å€‹ç¶²æ ¼
		if instance_id in slot_instances:
			var slot = slot_instances[instance_id]
			slot.set_selected(is_card_selected(instance_id))
		return

	var card_id = PlayerDataManager.get_card_id_from_instance(instance_id)
	print("é»æ“Šå¡ç‰‡ï¼šinstance_%s -> %sï¼Œä½ç½®ï¼š%s" % [instance_id, card_id, slot_position])
	# âœ… å‚³é instance_id è€Œé card_idï¼Œä»¥ä¾¿é¡¯ç¤ºç­‰ç´šè³‡è¨Š
	card_detail_panel.show_card_details_with_instance(instance_id, slot_position)

func _on_slot_right_clicked(instance_id: String, _slot_position: Vector2):
	"""æ ¼å­è¢«å³éµé»æ“Šï¼ˆæ¥æ”¶ instance_idï¼‰"""
	# âœ… æ‰¹é‡åˆªé™¤æ¨¡å¼ä¸‹ä¸é¡¯ç¤ºå³éµèœå–®
	if batch_delete_mode:
		return

	var card_id = PlayerDataManager.get_card_id_from_instance(instance_id)
	print("å³éµé»æ“Šå¡ç‰‡ï¼šinstance_%s -> %s" % [instance_id, card_id])
	# âœ… å­˜å„² instance_id è€Œé card_id
	context_menu_card_id = instance_id

	# ç²å–é¼ æ¨™å…¨å±€ä½ç½®
	var viewport = get_viewport()
	if viewport == null:
		print("âš ï¸ get_viewport() è¿”å› nullï¼Œç„¡æ³•é¡¯ç¤ºèœå–®")
		return
	var mouse_pos = viewport.get_mouse_position()

	# é¡¯ç¤ºèœå–®
	context_menu.position = Vector2i(mouse_pos)
	context_menu.popup()

# ==================== æ“´å……èƒŒåŒ…æŒ‰éˆ• ====================

func _on_expand_bag_pressed():
	"""æ“´å……èƒŒåŒ…/å–æ¶ˆæŒ‰éˆ•è¢«æŒ‰ä¸‹"""
	# âœ… æ‰¹é‡åˆªé™¤æ¨¡å¼ä¸‹ä½œç‚ºå–æ¶ˆæŒ‰éˆ•
	if batch_delete_mode:
		cancel_batch_delete_mode()
	else:
		GameManager.show_expand_bag_dialog()

# ==================== æ‰¹é‡åˆªé™¤åŠŸèƒ½ ====================

func _on_batch_delete_pressed():
	"""æ‰¹é‡åˆªé™¤æŒ‰éˆ•è¢«æŒ‰ä¸‹"""
	if not batch_delete_mode:
		# é€²å…¥æ‰¹é‡åˆªé™¤æ¨¡å¼
		enter_batch_delete_mode()
	else:
		# é€€å‡ºæ‰¹é‡åˆªé™¤æ¨¡å¼ä¸¦ç¢ºèªåˆªé™¤
		exit_batch_delete_mode()

func enter_batch_delete_mode():
	"""é€²å…¥æ‰¹é‡åˆªé™¤æ¨¡å¼"""
	batch_delete_mode = true
	selected_for_deletion.clear()

	# æ›´æ–°æŒ‰éˆ•æ–‡å­—
	batch_delete_button.text = "ç¢ºèªåˆªé™¤"
	batch_delete_button.modulate = Color(1.0, 0.5, 0.5)

	# âœ… å°‡æ“´å……èƒŒåŒ…æŒ‰éˆ•æ”¹ç‚ºå–æ¶ˆæŒ‰éˆ•
	expand_bag_button.text = "å–æ¶ˆ"
	expand_bag_button.modulate = Color(0.8, 0.8, 0.8)

	# ç¦ç”¨è¿”å›æŒ‰éˆ•
	back_button.disabled = true

	print("ğŸ“‹ é€²å…¥æ‰¹é‡åˆªé™¤æ¨¡å¼")

func exit_batch_delete_mode():
	"""é€€å‡ºæ‰¹é‡åˆªé™¤æ¨¡å¼ä¸¦åŸ·è¡Œåˆªé™¤"""
	if selected_for_deletion.size() == 0:
		# æ²’æœ‰é¸ä¸­ä»»ä½•å¡ç‰‡ï¼Œç›´æ¥é€€å‡º
		cancel_batch_delete_mode()
		return

	# é¡¯ç¤ºç¢ºèªå°è©±æ¡†
	show_batch_delete_confirmation()

func cancel_batch_delete_mode():
	"""å–æ¶ˆæ‰¹é‡åˆªé™¤æ¨¡å¼"""
	batch_delete_mode = false
	selected_for_deletion.clear()

	# æ¢å¾©æŒ‰éˆ•æ–‡å­—
	batch_delete_button.text = "æ‰¹é‡åˆªé™¤"
	batch_delete_button.modulate = Color(1.0, 1.0, 1.0)

	# âœ… æ¢å¾©æ“´å……èƒŒåŒ…æŒ‰éˆ•
	expand_bag_button.text = "æ“´å……èƒŒåŒ…"
	expand_bag_button.modulate = Color(1.0, 1.0, 1.0)

	# å•Ÿç”¨è¿”å›æŒ‰éˆ•
	back_button.disabled = false

	# åˆ·æ–°é¡¯ç¤º
	create_inventory_slots()

	print("âŒ å–æ¶ˆæ‰¹é‡åˆªé™¤æ¨¡å¼")

func show_batch_delete_confirmation():
	"""é¡¯ç¤ºæ‰¹é‡åˆªé™¤ç¢ºèªå°è©±æ¡†"""
	var CustomDialog = load("res://scripts/ui/CustomDialog.gd")
	var dialog = CustomDialog.new()

	var count = selected_for_deletion.size()
	var message = "ç¢ºå®šè¦åˆªé™¤é¸ä¸­çš„ %d å¼µå¡ç‰‡å—ï¼Ÿ\næ­¤æ“ä½œç„¡æ³•æ’¤éŠ·ï¼" % count

	var buttons = [
		{"text": "å–æ¶ˆ", "action": "cancel"},
		{"text": "ç¢ºèªåˆªé™¤", "action": "confirm"}
	]
	dialog.setup_choice_dialog("æ‰¹é‡åˆªé™¤", message, buttons)

	# é€£æ¥ä¿¡è™Ÿ
	dialog.button_pressed.connect(func(action):
		var scene_tree = get_tree()
		if scene_tree != null:
			await scene_tree.create_timer(0.1).timeout
		match action:
			"confirm":
				perform_batch_delete()
			"cancel":
				cancel_batch_delete_mode()
	)

	# æ·»åŠ åˆ°å ´æ™¯æ¨¹ä¸¦é¡¯ç¤º
	var tree = get_tree()
	if tree != null and tree.root != null:
		tree.root.add_child(dialog)
		dialog.show_dialog()
	else:
		print("âš ï¸ ç„¡æ³•é¡¯ç¤ºå°è©±æ¡†ï¼šget_tree() æˆ– root ç‚º null")

func perform_batch_delete():
	"""åŸ·è¡Œæ‰¹é‡åˆªé™¤"""
	var deleted_count = 0
	var failed_count = 0

	# æª¢æŸ¥æ˜¯å¦æœ‰å¡ç‰‡åœ¨éšŠä¼ä¸­
	var instance_ids_in_teams = PlayerDataManager.get_all_instance_ids_in_teams()

	for instance_id in selected_for_deletion:
		# æª¢æŸ¥æ˜¯å¦åœ¨éšŠä¼ä¸­
		if instance_id in instance_ids_in_teams:
			print("âš ï¸ [æ‰¹é‡åˆªé™¤] instance_%s åœ¨éšŠä¼ä¸­ï¼Œè·³é" % instance_id)
			failed_count += 1
			continue

		# åˆªé™¤å¡ç‰‡
		if PlayerDataManager.remove_card_by_instance(instance_id):
			deleted_count += 1
		else:
			failed_count += 1

	# é¡¯ç¤ºçµæœ
	var result_message = "æˆåŠŸåˆªé™¤ %d å¼µå¡ç‰‡" % deleted_count
	if failed_count > 0:
		result_message += "\n%d å¼µå¡ç‰‡ç„¡æ³•åˆªé™¤ï¼ˆå¯èƒ½åœ¨éšŠä¼ä¸­ï¼‰" % failed_count

	show_warning_dialog("åˆªé™¤å®Œæˆ", result_message)

	# é€€å‡ºæ‰¹é‡åˆªé™¤æ¨¡å¼
	cancel_batch_delete_mode()

	# åˆ·æ–°é¡¯ç¤º
	load_inventory()
	create_inventory_slots()
	update_capacity_display()

func toggle_card_selection(instance_id: String):
	"""åˆ‡æ›å¡ç‰‡é¸æ“‡ç‹€æ…‹ï¼ˆæ‰¹é‡åˆªé™¤æ¨¡å¼ä¸‹ï¼‰"""
	if instance_id in selected_for_deletion:
		selected_for_deletion.erase(instance_id)
		print("âŒ å–æ¶ˆé¸æ“‡ï¼šinstance_%s" % instance_id)
	else:
		selected_for_deletion.append(instance_id)
		print("âœ… é¸ä¸­ï¼šinstance_%s" % instance_id)

func is_card_selected(instance_id: String) -> bool:
	"""æª¢æŸ¥å¡ç‰‡æ˜¯å¦è¢«é¸ä¸­"""
	return instance_id in selected_for_deletion
